fix connected accounts spacing and layout

--- a/src/components/_user-popouts.scss
+++ b/src/components/_user-popouts.scss
@@ -67,14 +67,9 @@ div[class*="userPopout"] > div[class*="footer"] {
   padding: 10px;
 }
 
-[class*="userInfoSection"] [class*="connectedAccounts"] {
-  margin-top: -40px;
-}
-
 [class*="connectedAccounts"]
   [class*="connectedAccount"]:not([class*="connectedAccountName"]) {
   border: none;
-  background-color: var(--background-secondary-alt);
   border-radius: var(--ayu-border-radius);
 }
 
